<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        android:id="@+id/img_show_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@null"
        android:src="@drawable/avatar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                style="@style/LabelTextDetail"
                android:text="@string/tv_name" />

            <TextView
                style="@style/LabelTextDetail"
                android:text="@string/tv_age" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/layout_detail"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_detail"
                style="@style/TextDetail" />

            <TextView
                android:id="@+id/tv_age_detail"
                style="@style/TextDetail" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_delete_person"
        style="@style/TextButton"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_delete" />

</LinearLayout>